--- a/src/app/add-category-event/add-category-event.component.html
+++ b/src/app/add-category-event/add-category-event.component.html
@@ -1,143 +1,157 @@
 <br>
 <div class="container"> 
-        <div class="col-sm-6" *ngFor="let categoryData of categoryDatas; let i=index">
+    <br>
+    <div class="row">
+        <div class="col-sm-3 text-secondary">
+            <h5>Category</h5>
+        </div>
+        <br>
+        <div class="col-sm-6 text-secondary">
+            <h5>Description</h5>
+        </div>
+        <div class="col-sm-2 text-secondary">
+            <h5>Select / Deselect</h5>
+        </div>
+        <div class="col-sm-1 text-secondary">
+            <h5>Delete</h5>
+        </div>
+    </div>
+    <br>
+    <ng-container *ngFor="let categoryData of categoryDatas; let i=index">
+        <div class="row">
+            <div class="col-sm-3">
+                <h5>{{categoryData.category}} </h5>
+            </div>
             <br>
-            <div class="row">
-                <div class="fontS col-sm-4">
-                    <div class="col-sm-6 text-secondary"><h5>Category:</h5></div>
-                    <div class="col-sm-6"><h5> {{categoryData.category}} </h5></div>
+            <div class="col-sm-6">
+                <h5>{{categoryData.description}} </h5>
+            </div>
+            <div class="col-sm-2">
+                <button mat-raised-button *ngIf="categoryId != i" (click)="selectCategory(i)">Select</button>
+                <button mat-raised-button *ngIf="categoryId == i" (click)="selectCategory(i)">Deselect</button>
+            </div>
+            <div class="col-sm-1">
+                <button mat-raised-button color="warn" (click)="deleteCategory(i)">Delete</button>
+            </div>
+        </div>
+        <br>
+    </ng-container>
+    <form #categoryForm="ngForm" novalidate>
+        <h3 class="text-secondary fontS">Add Event Category:</h3>
+        <div class="row">
+            <div class="col-sm-6">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Category Name:</mat-label>
+                        <input matInput type="text" 
+                            placeholder="Category Name" 
+                            name="categoryName" 
+                            [(ngModel)]="categoryName"
+                            (input) = "isCategoryRedundant()"
+                            required />
+                        <mat-hint class="text-danger" *ngIf="errors.category"> This Category is taken </mat-hint>
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Category Description:</mat-label>
+                        <input matInput type="text" placeholder="Category Description" name="categoryDescription" [(ngModel)]="categoryDescription" required />
+                    </mat-form-field>
+                </p>
+                <div>
+                    <button mat-raised-button color="primary" type="submit"
+                        [disabled]="categoryForm.form.invalid || errors.category" (click)="addCategory()">Add Category</button>
                 </div>
+            </div>
+        </div>
+    </form>
+    <hr>
+    <div *ngIf="categoryId != -1">
+        <div class="col-sm-12">
+            <div class="text-secondary"><h5>Events in this category:</h5></div>
+            <div class="row text-secondary">
+                <div class="col-sm-1"><h5>S.No</h5></div>
+                <div class="col-sm-2"><h5> Name </h5></div>
+                <div class="col-sm-4"><h5> Description </h5></div>
+                <div class="col-sm-1"><h5> Fees </h5></div>
+                <div class="col-sm-1"><h5> Coupon Applicable </h5></div>
+                <div class="col-sm-1"><h5> Extra Money Required </h5></div>
+                <div class="col-sm-2"><h5> Delete </h5></div>
+            </div>
+            <div class="row" *ngFor="let event of categoryDatas[categoryId].events; let i=index">
                 <br>
-                <div class="fontS col-sm-4">
-                    <div class="col-sm-6 text-secondary"><h5>Description:</h5></div>
-                    <div class="col-sm-6"><h5> {{categoryData.description}} </h5></div>
+                <br>
+                <div class="col-sm-1"><h5>{{i+1}}:</h5></div>
+                <div class="col-sm-2"><h5> {{event.name}} </h5></div>
+                <div class="col-sm-4"><h5> {{event.description}} </h5></div>
+                <div class="col-sm-1"><h5> {{event.fees}} </h5></div>
+                <div class="col-sm-1">
+                    <mat-icon class="text-success" *ngIf="event.couponApplicable">check_circle</mat-icon>
+                    <mat-icon class="text-danger" *ngIf="!event.couponApplicable">not_interested</mat-icon>
+                </div>
+                <div class="col-sm-1">
+                    <mat-icon class="text-danger" *ngIf="!event.extra">not_interested</mat-icon>
+                    <small class="text-secondary text-center" *ngIf="event.extra">
+                        <mat-icon class="text-success">check_circle</mat-icon> {{event.extraMoney}}
+                    </small>
                 </div>
                 <div class="col-sm-2">
-                    <button mat-raised-button *ngIf="categoryId != i" (click)="selectCategory(i)">Select</button>
-                    <button mat-raised-button *ngIf="categoryId == i" (click)="selectCategory(i)">Deselect</button>
-                </div>
-                <div class="col-sm-2">
-                    <button mat-raised-button color="warn" (click)="deleteCategory(i)">Delete</button>
+                    <button mat-raised-button color="warn" (click)="deleteEvent(event,i)">Delete Event</button>
                 </div>
             </div>
             <br>
         </div>
-        <form #categoryForm="ngForm" novalidate>
-            <h3 class="text-secondary fontS">Add Event Category:</h3>
+        <form #eventForm="ngForm" novalidate>
+            <h3 class="text-secondary fontS">Add Events in the selected Category:</h3>
             <div class="row">
                 <div class="col-sm-6">
                     <p>
                         <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>Category Name:</mat-label>
-                            <input matInput type="text" 
-                             placeholder="Category Name" 
-                             name="categoryName" 
-                             [(ngModel)]="categoryName"
-                             (input) = "isCategoryRedundant()"
-                             required />
-                            <mat-hint class="text-danger" *ngIf="errors.category"> This Category is taken </mat-hint>
+                            <mat-label>Event Name:</mat-label>
+                            <input matInput type="text"
+                                placeholder="Event Name" 
+                                name="newEventName" 
+                                [(ngModel)]="newEventName"
+                                (input) = "isEventRedundant()"
+                                required />
+                                <mat-hint class="text-danger" *ngIf="errors.event"> This Event is taken </mat-hint>
+                        </mat-form-field>
+                    </p>
+                    <p>
+                        <mat-form-field appearance="outline" style="width: 100%;">
+                            <mat-label>Event Description:</mat-label>
+                            <textarea matInput type="text" rows="4" style="resize: none;" placeholder="Event Description" name="newEventDescription" [(ngModel)]="newEventDescription" required></textarea>
                         </mat-form-field>
                     </p>
                 </div>
                 <div class="col-sm-6">
                     <p>
                         <mat-form-field appearance="outline" style="width: 100%;">
-                            <mat-label>Category Description:</mat-label>
-                            <input matInput type="text" placeholder="Category Description" name="categoryDescription" [(ngModel)]="categoryDescription" required />
+                            <mat-label>Event Fees:</mat-label>
+                            <input matInput type="number" placeholder="Event Fees" name="newEventFees" [(ngModel)]="newEventFees" required />
                         </mat-form-field>
                     </p>
-                    <div>
-                        <button mat-raised-button color="primary" type="submit"
-                            [disabled]="categoryForm.form.invalid || errors.category" (click)="addCategory()">Add Category</button>
-                    </div>
+                    <p>
+                        <mat-checkbox name="newEventCoupon" [(ngModel)]="newEventCoupon">Coupon Applicable</mat-checkbox>
+                    </p>
+                    <p>
+                        <mat-checkbox name="newEventExtra" [(ngModel)]="newEventExtra">Extra money required</mat-checkbox>
+                    </p>
+                    <p *ngIf="newEventExtra">
+                        <mat-form-field appearance="outline" style="width: 100%;">
+                            <mat-label>Event Extra Money:</mat-label>
+                            <input matInput type="text" placeholder="Event Extra Money Amount" name="newEventExtraMoney" [(ngModel)]="newEventExtraMoney" required />
+                        </mat-form-field>
+                    </p>
+                    <button mat-raised-button color="primary"
+                        [disabled]="eventForm.form.invalid || errors.event || !(!newEventExtra || newEventExtraMoney>0)" (click)="addEvent()">Add Event</button>
                 </div>
             </div>
+                <br><br>
         </form>
-        <hr>
-        <div *ngIf="categoryId != -1">
-            <div class="col-sm-12">
-                <div class="text-secondary"><h5>Events in this category:</h5></div>
-                <div class="row fontS">
-                    <div class="col-sm-1 text-secondary"><h5>S.No</h5></div>
-                    <div class="col-sm-3 text-secondary"><h5> Name </h5></div>
-                    <div class="col-sm-3 text-secondary"><h5> Description </h5></div>
-                    <div class="col-sm-1 text-secondary"><h5> Fees </h5></div>
-                    <div class="col-sm-2 text-secondary"><h5> Coupon Applicable </h5></div>
-                    <div class="col-sm-1 text-secondary"><h5> Extra Money Required </h5></div>
-                    <div class="col-sm-1"></div>
-                </div>
-                <div class="row" *ngFor="let event of categoryDatas[categoryId].events; let i=index">
-                    <br>
-                    <div class="col-sm-1"><h5>{{i+1}}:</h5></div>
-                    <div class="col-sm-3"><h5> {{event.name}} </h5></div>
-                    <div class="col-sm-3"><h5> {{event.description}} </h5></div>
-                    <div class="col-sm-1"><h5> {{event.fees}} </h5></div>
-                    <div class="col-sm-2">
-                        <mat-icon class="text-success" *ngIf="event.couponApplicable">check_circle</mat-icon>
-                        <mat-icon class="text-danger" *ngIf="!event.couponApplicable">not_interested</mat-icon>
-                    </div>
-                    <div class="col-sm-1">
-                        <mat-icon class="text-danger" *ngIf="!event.extra">not_interested</mat-icon>
-                        <small class="text-secondary text-center" *ngIf="event.extra">
-                            <mat-icon class="text-success">check_circle</mat-icon> {{event.extraMoney}}
-                        </small>
-                    </div>
-                    <div class="col-sm-1">
-                        <button mat-raised-button color="warn" (click)="deleteEvent(event,i)">Delete Event</button>
-                    </div>
-                </div>
-                <br>
-            </div>
-            <form #eventForm="ngForm" novalidate>
-                <h3 class="text-secondary fontS">Add Events in the selected Category:</h3>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Event Name:</mat-label>
-                                <input matInput type="text"
-                                 placeholder="Event Name" 
-                                 name="newEventName" 
-                                 [(ngModel)]="newEventName"
-                                 (input) = "isEventRedundant()"
-                                 required />
-                                 <mat-hint class="text-danger" *ngIf="errors.event"> This Event is taken </mat-hint>
-                            </mat-form-field>
-                        </p>
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Event Description:</mat-label>
-                                <input matInput type="text" placeholder="Event Description" name="newEventDescription" [(ngModel)]="newEventDescription" required />
-                            </mat-form-field>
-                        </p>
-                    </div>
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Event Fees:</mat-label>
-                                <input matInput type="text" placeholder="Event Fees" name="newEventFees" [(ngModel)]="newEventFees" required />
-                            </mat-form-field>
-                        </p>
-                        <p>
-                            <mat-checkbox name="newEventCoupon" [(ngModel)]="newEventCoupon">Coupon Applicable</mat-checkbox>
-                        </p>
-                        <p>
-                            <mat-checkbox name="newEventExtra" [(ngModel)]="newEventExtra">Extra money required</mat-checkbox>
-                        </p>
-                        <p *ngIf="newEventExtra">
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Event Extra Money:</mat-label>
-                                <input matInput type="text" placeholder="Event Extra Money Amount" name="newEventExtraMoney" [(ngModel)]="newEventExtraMoney" required />
-                            </mat-form-field>
-                        </p>
-                        <div>
-                            <button mat-raised-button color="primary"
-                                [disabled]="eventForm.form.invalid || errors.event || !(!newEventExtra || newEventExtraMoney>0)" (click)="addEvent()">Add Event</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+    </div>
 </div>
 
 <div class="loader-holder" *ngIf="loading">
