Toggle Switches, Bugs

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -84,7 +84,7 @@
                             <p style="color: rgba(255,255,255,.7);"> 
                                 {{event.description}}
                             </p>
-                            <ng-container *ngIf="event.extra && event.show">
+                            <ng-container *ngIf="event.extra && event.visible">
                                 <mat-form-field style="width: 60%;">
                                     <mat-label>Extra Quantity:</mat-label>
                                     <span matPrefix>INR &nbsp;&nbsp;</span>
