--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,11 @@ button {
     overflow-y: auto;
 }
 
+.mat-expansion-panel-header {
+    height: auto !important;
+    padding: 15px 24px !important;
+}
+
 .blackySnack {
     background: black;
     color: white;
