--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,63 +1,11 @@
 <br>
-<div class="container">
-    <br>
-    <h4 class="text-center text-danger header">My Registration Info</h4>
-    <br>
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Name:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.name}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Email ID:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.email}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Stream:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.stream}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Year:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.year}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Contact Number:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.contact}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>College Name:</h5></div>
-                <div class="col-sm-6"><h5> {{userData.instituteName}} </h5></div>
-            </div>
-            <br>
-            <div class="row fontS">
-                <div class="col-sm-6 text-secondary"><h5>Event Registration:</h5></div>
-                <div class="col-sm-6" *ngIf="eventRegistered"><h5>Complete, Paid INR {{userData.total}}/- <br><a [href]="receiptUrl">Download Receipt</a></h5></div>
-                <div class="col-sm-6 text-danger" *ngIf="!eventRegistered"><h5>Pending...</h5></div>
-            </div>
-            <br>
-            <div class="row fontS" *ngIf="eventRegistered">
-                <div class="col-sm-6 text-secondary"><h5>Registration Verification:</h5></div>
-                <div class="col-sm-6" *ngIf="userData.verified "><h5>Complete</h5></div>
-                <div class="col-sm-6 text-danger" *ngIf="!userData.verified "><h5>Pending...</h5></div>
-            </div>
-            <br>
-        </div>
-        <div class="col-sm-2"></div>
-    </div>
+<div class="container" *ngIf="userData.total > 0">
+    <h1 class="header text-danger">Event Registration is Complete. You can Check Verification Status in Profile.</h1>
 </div>
-<div class="container" *ngIf="!eventRegistered">
+<div class="container" *ngIf="userData.total == 0">
     <div class="row">
         <div class="col-sm-12">
-            
-            <br>
-            <h4 class="text-center text-danger header">Event Info</h4>
+            <h1 class="text-center text-danger header">Event Registration</h1>
             <small class="text-secondary text-center">The events which are marked <mat-icon class="text-danger">check_circle</mat-icon> will be eligible for discount when a valid coupon code is applied.</small>
             <br><br>
             <mat-accordion class="example-headers-align mat-elevation-z8" multi>
@@ -112,7 +60,7 @@
 </div>
 <br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
-<div class="row text-center fontS" *ngIf="!eventRegistered" style="background: #202020; padding: 1% 1% 0% 1% !important;">
+<div class="row text-center fontS" *ngIf="userData.total == 0" style="background: #202020; padding: 1% 1% 0% 1% !important;">
     <div class="col-sm-2 text-center">
         <mat-form-field appearance="legacy" style="width: 80%;" *ngIf="temp == 0">
             <mat-label>Enter Coupon Code here</mat-label>
@@ -146,8 +94,8 @@
 <br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
     <div class="text-center fontS" style="position: fixed; width: 100% !important; bottom: 0; background: #202020; padding: 1% !important;">
-        <h5 *ngIf="coupon.couponCode && !eventRegistered">Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5>
-        <h5 *ngIf="!coupon.couponCode && !loading && !eventRegistered">Total Amount (INR): {{totalO + totalC}}  </h5>
+        <h5 *ngIf="coupon.couponCode && userData.total == 0">Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5>
+        <h5 *ngIf="!coupon.couponCode && !loading && userData.total == 0">Total Amount (INR): {{totalO + totalC}}  </h5>
     </div>
 <!-- </div> -->
 <div class="loader-holder" *ngIf="loading">
