--- a/src/app/payment-dialog/payment-dialog.component.html
+++ b/src/app/payment-dialog/payment-dialog.component.html
@@ -1,7 +1,17 @@
-<h1 mat-dialog-title class="header text-danger">Payment Instructions</h1>
+<h1 mat-dialog-title class="header text-danger">Payment Instructions <button mat-icon-button class="float-right doit" (click)="close()"><mat-icon>clear</mat-icon></button></h1>
+
 <hr>
 <div mat-dialog-content>
-  <p>Instructions Here</p>
-  <hr>
-  <h6 class="text-danger">Click anywhere outside to close this dialog.</h6>
+  <span class="text-secondary">PAYEE NAME: </span>SUBHAJIT SAHA<br>
+  <span class="text-secondary">G-PAY / PAYTM / PHONEPE NUMBER: </span>9679343204<br>
+  <span class="text-secondary">UPI ID: </span>9679343204@paytm<br>
+  <span class="text-secondary">BANK A/C NUMBER: </span>919679343204<br>
+  <span class="text-secondary">A/C TYPE: </span>SAVINGS<br>
+  <span class="text-secondary">IFSC: </span>PYTM0123456<br>
+  <span class="text-secondary">BANK NAME: </span>PAYTM PAYMENT BANK<br>
+  <span class="text-secondary">BRANCH NAME: </span>SECTOR-5, NOIDA, UTTAR PRADESH<br>
+  <br>
+  <div class="text-center">
+    <img src="../../assets/QR.jpg" style="width: 100%; display: inline-block;" />
+  </div>
 </div>
