--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <br>
-    <h3 class="text-center text-danger fontS">Reset Password Panel</h3>
+    <h1 class="header text-center text-danger">Reset Password Panel</h1>
     <small class="text-danger">Select a Name. Entire User information will be displayed below the drop down to help Cross-Verify. Names are sorted.</small>
     <br><br>
     <form novalidate #changeP="ngForm" (submit)="resetPassword($event.target)" *ngIf="!loading">
