--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,18 @@
 
 @import '@angular/material/prebuilt-themes/pink-bluegrey.css';
 
+@font-face {
+    font-family: 'custom';
+    src: url('../src/assets/HACKED.ttf');
+}
+
+@font-face {
+	font-family: 'custom2';
+	font-style: normal;
+	font-weight: normal;
+	src: url('../src/assets/trebuc.woff') format('woff');
+}
+
 html, body {
     height: 100%;
     overflow-x: hidden;
@@ -12,12 +24,7 @@ html, body {
 
 body {
     margin: 0;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
-}
-
-@font-face {
-    font-family: 'custom';
-    src: url('../src/assets/HACKED.ttf');
+    font-family: custom2 !important;
 }
 
 .header {
@@ -25,7 +32,7 @@ body {
 }
 
 button {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-family: custom2 !important;
 }
 
 .mat-tab-body-content {
@@ -70,11 +77,11 @@ button {
 .blackySnack {
     background: black;
     color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-family: custom2 !important;
 }
 
 .fontS {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: custom2;
 }
 
 hr {
