--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -17,12 +17,11 @@
     <div class="col-md-2">
         <mat-checkbox color="warn" (click)="toggle('f')" [(ngModel)]="show[5]" class="fontS">Contact#</mat-checkbox>
     </div>
-    <div class="col-md-2"></div>
-</div>
-<div class="row" style="margin: 0 5%;">
     <div class="col-md-2">
         <mat-checkbox color="warn" (click)="toggle('g')" [(ngModel)]="show[6]" class="fontS">Institution Name</mat-checkbox>
     </div>
+</div>
+<div class="row" style="margin: 0 5%;">
     <div class="col-md-2">
         <mat-checkbox color="warn" (click)="toggle('h')" [(ngModel)]="show[7]" class="fontS">Registered On</mat-checkbox>
     </div>
@@ -33,7 +32,10 @@
         <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[9]" class="fontS">UPI ID</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('k')" [(ngModel)]="show[10]" class="fontS">Action</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('k')" [(ngModel)]="show[10]" class="fontS">Coupon Photo</mat-checkbox>
+    </div>
+    <div class="col-md-2">
+        <mat-checkbox color="warn" (click)="toggle('l')" [(ngModel)]="show[11]" class="fontS">Action</mat-checkbox>
     </div>
     <div class="col-md-2"></div>
 </div>
@@ -95,6 +97,13 @@
         </td>
     </ng-container>
     <ng-container matColumnDef="k">
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Coupon Photo </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> 
+            <span class="fontS" *ngIf="!user.couponPhoto">Coupon Photo not added</span>
+            <a *ngIf="user.couponPhoto" [href]="url+user._id+'/couponPhoto.'+user.couponPhoto">Download Coupon Photo</a>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="l">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Action </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
             <button mat-icon-button
