--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,8 +1,8 @@
 <br>
-<div class="container" *ngIf="userData.total > 0">
+<!-- <div class="container" *ngIf="userData.total > 0">
     <h1 class="header text-danger">Event Registration is Complete. You can Check Verification Status in Profile.</h1>
-</div>
-<div class="container" *ngIf="userData.total == 0">
+</div> -->
+<div class="container">
     <div class="row">
         <div class="col-sm-12">
             <h1 class="text-center text-danger header">Event Registration</h1>
@@ -27,11 +27,13 @@
               
                 <ng-container *ngFor="let event of categoryData.events; let i=index">
                     <br *ngIf="i%2 == 0">
-                    <mat-card *ngIf="event.show" class="col-sm-6 example-card mat-elevation-z8" style="display: inline-block; background: #303030;">
+                    <mat-card *ngIf="event.show && !event.registered" class="col-sm-6 example-card mat-elevation-z8" style="display: inline-block; background: #303030;">
                         <mat-card-header>
-                            <mat-card-title><mat-checkbox class="header text-danger" color="warn" (click)="eventRegistration(categoryData._id,event)">
-                                {{event.name}} @ {{event.fees ? 'INR '+event.fees+'/-' : 'FREE'}} <mat-icon class="text-danger" *ngIf="event.couponApplicable">check_circle</mat-icon>
-                            </mat-checkbox></mat-card-title>
+                            <mat-card-title>
+                                <mat-checkbox class="header text-danger" color="warn" (click)="eventRegistration(categoryData._id,event)">
+                                    {{event.name}} @ {{event.fees ? 'INR '+event.fees+'/-' : 'FREE'}} <mat-icon class="text-danger" *ngIf="event.couponApplicable">check_circle</mat-icon>
+                                </mat-checkbox>
+                            </mat-card-title>
                             <mat-card-subtitle></mat-card-subtitle>
                         </mat-card-header>
                         <mat-card-content class="fontS">
@@ -53,6 +55,21 @@
                             </ng-container>
                         </mat-card-content>
                     </mat-card>
+                    <mat-card *ngIf="event.registered" class="col-sm-6 example-card mat-elevation-z8" style="display: inline-block; background: #303030;">
+                        <mat-card-header>
+                            <mat-card-title>
+                                {{event.name}} @ {{event.fees ? 'INR '+event.fees+'/-' : 'FREE'}} 
+                                <mat-icon class="text-danger" *ngIf="event.couponApplicable">check_circle</mat-icon>
+                                (Already Registered)
+                            </mat-card-title>
+                            <mat-card-subtitle></mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content class="fontS">
+                            <p style="color: rgba(255,255,255,.7);"> 
+                                {{event.description}}
+                            </p>
+                        </mat-card-content>
+                    </mat-card>
                     <span class="example-spacer" *ngIf="i%2 == 0"></span>
                     <br *ngIf="i%2 == 1">
                 </ng-container>
@@ -65,7 +82,7 @@
 </div>
 <br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
-<div class="row text-center fontS" *ngIf="userData.total == 0" style="background: #202020; padding: 1% 1% 0% 1% !important;">
+<div class="row text-center fontS" style="background: #202020; padding: 1% 1% 0% 1% !important;">
     <div class="col-sm-4 text-center">
         <mat-form-field appearance="legacy" style="width: 80%;" *ngIf="temp == 0">
             <mat-label>Enter Coupon Code here</mat-label>
@@ -110,8 +127,8 @@
 <br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
     <div class="text-center fontS" style="position: fixed; width: 100% !important; bottom: 0; background: #202020; padding: 1% !important;">
-        <h5 *ngIf="coupon.couponCode && userData.total == 0">Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5>
-        <h5 *ngIf="!coupon.couponCode && !loading && userData.total == 0">Total Amount (INR): {{totalO + totalC}}  </h5>
+        <h5 *ngIf="coupon.couponCode">Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5>
+        <h5 *ngIf="!coupon.couponCode && !loading">Total Amount (INR): {{totalO + totalC}}  </h5>
     </div>
 <!-- </div> -->
 <div class="loader-holder" *ngIf="loading">
