--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -85,7 +85,7 @@
     <ng-container matColumnDef="i">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Payment Receipt </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt.'+user.receipt">Download Receipt</a>
+            <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt1.'+user.receipt">Download Receipt</a>
             <span class="fontS" *ngIf="user.receipt==''">Event not registered</span>
         </td>
     </ng-container>
